--- a/src/containers/NIH_dietary_supplement_label_database/index.sass
+++ b/src/containers/NIH_dietary_supplement_label_database/index.sass
@@ -1,98 +1,126 @@
 .app-container
-    width: 100%;
-    height: auto;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
+    width: 100%
+    height: auto
+    display: flex
+    align-items: flex-start
+    justify-content: center
 
 .app-center-container
-    width: 100%;
-    max-width: 1000px;
-    padding: 40px 0px;
+    width: 100%
+    max-width: 1000px
+    padding: 40px 0px
 
 .heading-h1
-    margin: 0;
-    margin-bottom: 30px;
+    margin: 0
+    margin-bottom: 30px
 
 .form-div
-    width: 100%;
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
+    width: 100%
+    margin-bottom: 20px
+    display: flex
+    flex-direction: column
 
 .form-div label
-    margin-bottom: 5px;
+    margin-bottom: 5px
 
 .form-action-btns
-    margin-bottom: 20px;
+    margin-bottom: 20px
 
 .form-action-btns button
-    cursor: pointer;
+    cursor: pointer
 
 .heading-h2
-    margin: 50px 0 20px;
+    margin: 50px 0 20px
 
 .product-ul
-    display: flex;
-    flex-direction: column;
+    display: flex
+    flex-direction: column
 
 .product-info
-    display: flex;
-    flex-direction: column;
-    border: 2px solid #ccc;
-    border-radius: 10px;
-    padding: 20px;
+    display: flex
+    flex-direction: column
+    border: 2px solid #ccc
+    border-radius: 10px
+    padding: 20px
 
 .product-name
-    margin: 0;
-    margin-bottom: 20px;
+    margin: 0
+    margin-bottom: 20px
 
 .product-info-sub-heading
-    margin: 0;
-    margin-bottom: 20px;
+    margin: 0
+    margin-bottom: 20px
 
 .product-info:not(:last-child)
-    margin-bottom: 20px;
+    margin-bottom: 20px
 
 .product-img
-    max-height: 200px;
-    height: 200px;
-    width: auto;
-    margin-bottom: 10px;
+    max-height: 200px
+    height: 200px
+    width: auto
+    margin-bottom: 10px
 
-.product-img img 
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
-    max-width: max-content;
+.product-img img
+    object-fit: contain
+    width: 100%
+    height: 100%
+    max-width: max-content
 
 .product-info-section:not(:last-child)
-    margin-bottom: 50px;
+    margin-bottom: 50px
 
 .key-value-pairs
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    margin: 0;
-    margin-bottom: 10px;
+    display: flex
+    align-items: flex-start
+    justify-content: flex-start
+    margin: 0
+    margin-bottom: 10px
 
 .key-value-pairs span
-    font-weight: bold;
-    margin-right: 5px;
-    min-width: 200px;
-    max-width: 200px;
-    word-break: break-all;
+    font-weight: bold
+    margin-right: 5px
+    min-width: 200px
+    max-width: 200px
+    word-break: break-all
 
 .heading-h2
-    margin: 30px 0 20px;
+    margin: 30px 0 20px
 
 .tabel-head-th
-    text-align: left;
+    text-align: left
 
 .tabel-body-td p span
-    margin-right: 5px;
-    font-weight: bold;
+    margin-right: 5px
+    font-weight: bold
 
 .zero-state-msg p
-    text-align: center;
+    text-align: center
 
+.docAi-container
+    width: 100%
+    border: 2px solid #ccc
+    border-radius: 10px
+    padding: 20px
+    box-sizing: border-box
+    display: flex
+    flex-direction: column
+    &>div
+        width: 100%
+        display: flex
+        flex-direction: column
+
+.ingredient-li
+    display: flex
+    padding: 5px 0px
+    &>img
+        width: 50px
+        height: 50px
+        border-radius: 50%
+        margin-right: 10px
+.nested-ingredient-li
+    margin-left: 50px
+.search-div
+    button
+        margin-left: 5px
+.document-ai-para .highlight-text
+    background-color: yellow
