--- a/src/components/NIH/index.scss
+++ b/src/components/NIH/index.scss
@@ -146,3 +146,30 @@
 .document-ai-para .highlight-text {
     background-color: $highLightColor;
 }
+
+.ingredient-comparision-table {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    h3 {
+        margin-bottom: 20px;
+        color: $primaryColor;
+    }
+    table {
+        width: 100%;
+    }
+    .table-row {
+        width: 100%;
+    }
+    table,
+    td,
+    th {
+        border: 1px solid $borderColor;
+        border-collapse: collapse;
+    }
+    th,
+    td {
+        text-align: left;
+        padding: 10px;
+    }
+}
