--- a/src/components/NIH/index.scss
+++ b/src/components/NIH/index.scss
@@ -147,10 +147,11 @@
     background-color: $highLightColor;
 }
 
-.ingredient-comparision-table {
+.table-comparision {
     width: 100%;
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
     h3 {
         margin-bottom: 20px;
         color: $primaryColor;
@@ -171,5 +172,13 @@
     td {
         text-align: left;
         padding: 10px;
+        span {
+            font-weight: bold;
+            margin-right: 5px;
+            text-transform: capitalize;
+        }
+    }
+    .table-td {
+        width: 33%;
     }
 }
